# pathway_v01

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  run_ruff.sh  rxconfig.py
.cursor/rules/: code-style-patterns.mdc  env-vars.mdc  overall-project.mdc  scripts-docstrings-and-docs.mdc
agentic_workflow/: __init__.py  llm_chains.py  reducers.py  schemas.py  utils.py  workflow.py
agentic_workflow/agent_multi_turn_conversation/: graph.py
agentic_workflow/agents/: __init__.py
agentic_workflow/agents/agent_for_forecast/: forecasting.py
agentic_workflow/agents/agent_for_forecast/forecast_model/: continue_train_and_tune.py  entrenar_modelo_y_optimizar_hiperparametros.py  forecaster.py  inference.py  visualizar_hiperparametros.py
agentic_workflow/agents/agent_for_rag/: get_documents.py  multi_query_retriever.py
agentic_workflow/agents/agent_for_tables/: create_test_tables.py  loaded_tables.yaml  pandas_agent.py  tables_analysis.py
agentic_workflow/agents/agent_for_visualizations/: visualizer.py
agentic_workflow/agents/agent_for_visualizations/plotly_builder/: PlotlySchema_classes.py  plot_generator.py  plot_generator_tests_inputs.yaml
agentic_workflow/agents/agent_for_websearch/: domains.yaml  search.py  websearch_tool.py
agentic_workflow/agents/agent_multi_turn_planner/: planner.py
agentic_workflow/agents/agente_for_reporting/: report_generation.py
agentic_workflow/dataframes_QA/tables/: demographics.csv  nutrient_summary.csv  patient_time_series.csv
agentic_workflow/fewshot/: examples.yaml  loader.py  retriever.py
agentic_workflow/multiturn_conversational_agent/: graph.py
agentic_workflow/prompts/: system_prompts.yaml
agentic_workflow/streamers/: by_updates.py  streamer.py
agentic_workflow/vectorstore/: add.py  delete.py  indexed_pdfs.yaml  indexed_pdfs_get.py  indexing.py  retriever.py  vectorstore_theme.yaml
dev/langgraph_basics/: chains_for_hybrid_search_and_metadata_filtering.py  simple_ReAct.py  simple_hybrid_search_w_metadata_filtering.py  workflow_for_parallel_hybrid_search_w_meta_filtering.py
dev/langgraph_basics/Neo4jGraphRAG/: agent_for_semantic_graphRAG.py  cypher_query_agent.py  cypher_runner.py  graphrag.py  hybrid_cypher_retrieving.py  knowledge_graph_builder.py  llm_chains_cypher.py  sample_generated_answers.yaml  sample_queries.yaml
dev/tpp_agentic_graph_v4/: __init__.py  agentic_workflow.py  chains.py  llm_chains.py  reducers.py  schemas.py  utils.py  workflow.py
dev/tpp_agentic_graph_v4/agents/: __init__.py  planner.py
dev/tpp_agentic_graph_v4/agents/agent_for_forecast/: forecasting.py  forecasting_old.py
dev/tpp_agentic_graph_v4/agents/agent_for_reasoning/: reflect_over_info.py
dev/tpp_agentic_graph_v4/agents/agent_for_tables/: loaded_tables.yaml  pandas_agent.py  tables_analysis.py
dev/tpp_agentic_graph_v4/agents/agent_multi_turn_planner/: planner.py
dev/tpp_agentic_graph_v4/fewshot/: __init__.py  examples.yaml  examples_old.yaml  loader.py  retriever.py
dev/tpp_agentic_graph_v4/prompts/: __init__.py  system_prompts.yaml
dev/tpp_agentic_graph_v4/streamers/: by_updates.py
dev/tpp_agentic_graph_v4/tooling/: db_instance.py  utilities.py
dev/tpp_agentic_graph_v4/tools/: __init__.py  get_moving_avg_forecast.py  get_office_configurations.py  get_office_configurations_pipeline.py  get_simulation.py
dev/tpp_agentic_graph_v4/tools/temp/: df_final.parquet
dev/tpp_agentic_graph_v4/vectorstore/: __init__.py  retriever.py  upsert_index.py  vectorstore_theme.yaml
dev/tpp_agentic_graph_v4/workforce/: README_WORKFORCE.md  __init__.py  constants.py  models_request.py  models_response.py  service_logger.py  simulator.py
example.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pathway_front/: pathway_front.py  state.py  style.py
(+15 files in other folders)
